# fastapi_scheduler

./: .gitignore  Dockerfile  README.md  README.rst  alembic.ini  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
actions/: get_data.py  scheduler_action.py  send_data.py
actions/app/: sdk.py
app/: db.py  exceptions.py  main.py
app/api/v1/: __init__.py  api_router.py
app/api/v1/endpoints/: song.py
app/crud/: __init__.py  base.py  remind.py  schedule.py  song.py  task.py  user.py  user_data.py
app/models/: remind.py  schedule.py  song.py  task.py  user.py  user_data.py  utils.py
app/routes/: remind.py  schedule.py  task.py  user.py  user_data.py
migrations/: env.py  script.py.mako
migrations/versions/: 1f932a38596a_user_userdata_task_remind.py  5b82d129ee4f_add_year_to_song.py  a6e506109d15_init.py  a782de47d4d5_add_schedule_model.py  f93788902a22_create_user_userdata_task_remind.py
old_migrations/versions/: 3c4f04d05230_add_remind.py  3f4ca0b2a2d3_add_task_plase.py  4f609087ae67_update_models.py  67ef6db8a2ab_init_commit.py  96265422d15e_update_user.py  c745d88db3fb_fix_dtime.py  d63ecde3a2f5_new_models_userdata.py
tests/: conftest.py  data.py  test_app.py
tests/api/: test_api_remind.py  test_api_task.py  test_api_user.py  test_api_user_data.py
tests/models/: test_app.py  test_model_user.py
