[tool.poetry]
name = "async-sqlmodel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
aiosqlite = "^0.17.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
