[tool.poetry]
name = "async-sqlmodel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
alembic = "^1.8.1"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.971"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
