[tool.poetry]
name = "async-sqlmodel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
sqlmodel = "^0.0.8"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
httpx = "^0.23.3"
prometheus-fastapi-instrumentator = "^6.0.0"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-aiohttp = "^1.0.4"
anyio = "^3.6.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "6.0"
# addopts = "-ra -q"
addopts = "--cov=app --cov-report term-missing -ra"  # -s
testpaths = [
    "tests",
]
